[tool.poetry]
name = "image.bert.token.tagger"
version = "0.1.0"
description = ""
authors = ["melisa-qordoba <melisa@qordoba.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.1.1"
torch = "^1.7.1"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz#egg=en_core_web_sm==2.3.1" }
spacy = "^2.3.5"
pyfunctional = "^1.4.2"
quote-manager = "^0.3.0"
bert-token-tagger = "^0.1.1"
pytokenizations = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
